add random run test